--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,8 @@
   text-align: center;
   grid-area: temp;
   border: 25px;
+  margin-top: 50px;
+  font-size: 35px;
 }
 
 .temperaturahoras{
@@ -102,7 +104,7 @@ hr{
   background-color: aliceblue;
 }
 .barra1{
-  height: 100px;
+  /* height: 100px; */
   margin-top: -110px;
   margin-left: 45px;
 }
